--- a/css/response_1439.css
+++ b/css/response_1439.css
@@ -206,6 +206,42 @@
 
 
 
+    aside .article_image
+    {
+        border-radius: 22px;
+    }
+
+
+
+    aside .articles
+    {
+        padding: 32px 36px;
+
+        border-radius: 22px;
+    }
+
+
+    aside .articles .title
+    {
+        font-size: 25px;
+
+        margin-bottom: 20px;
+    }
+
+
+    aside .articles .items
+    {
+        font-size: 20px;
+        line-height: 28px;
+    }
+
+    aside .articles .items > * + *
+    {
+        margin-top: 20px;
+    }
+
+
+
     /*---------------
         Page head
     ---------------*/
@@ -243,6 +279,13 @@
     {
         font-size: 18px;
         line-height: 24px;
+    }
+
+
+    .text_block .big
+    {
+        font-size: 22px;
+        line-height: 28px;
     }
 
 
@@ -1754,12 +1797,138 @@
 
 
 
+    /*--------------
+        Articles
+    --------------*/
+    .articles
+    {
+        padding: 48px 0 60px;
+    }
+
+
+    .articles .page_title
+    {
+        margin-bottom: 36px;
+    }
+
+
+    .articles .row
+    {
+        margin-bottom: -24px;
+        margin-left: -24px;
+    }
+
+    .articles .row > *
+    {
+        width: calc(33.333% - 24px);
+        margin-bottom: 24px;
+        margin-left: 24px;
+    }
+
+
+    .articles .article
+    {
+        border-radius: 22px;
+    }
+
+
+    .articles .article .info
+    {
+        padding: 24px 28px;
+    }
+
+
+    .articles .article .name
+    {
+        font-size: 22px;
+        line-height: 26px;
+    }
+
+
+    .articles .article .desc
+    {
+        font-size: 18px;
+        line-height: 26px;
+
+        margin-top: 16px;
+    }
+
+
+    .articles .article .link
+    {
+        font-size: 22px;
+        line-height: 26px;
+
+        margin-top: 16px;
+    }
+
+
+
+    /*------------------
+        Article info
+    ------------------*/
+    .article_info
+    {
+        padding: 48px 0 60px;
+    }
+
+
+    .article_info .page_title
+    {
+        margin-bottom: 36px;
+    }
+
+
+    .article_info .articles_link
+    {
+        margin-top: 40px;
+    }
+
+
+    .article_info .articles_link a
+    {
+        font-size: 22px;
+        line-height: 26px;
+    }
+
+
+    .article_info .articles_link .icon
+    {
+        width: 40px;
+        height: 40px;
+        margin-right: 12px;
+    }
+
+    .article_info .articles_link .icon img
+    {
+        width: 20px;
+        height: 20px;
+    }
+
+    .article_info .articles_link .icon + *
+    {
+        width: calc(100% - 52px);
+    }
+
+
+    .article_info aside > * + *
+    {
+        margin-top: 32px;
+    }
+
+
+
     /*------------
         Footer
     ------------*/
     footer
     {
         padding-bottom: 40px;
+    }
+
+    footer.bg
+    {
+        padding-top: 40px;
     }
 
 
