--- a/css/styles.css
+++ b/css/styles.css
@@ -376,7 +376,6 @@ button
 
 
 
-
 .fancybox__content > .carousel__button.is-close
 {
     top: 22px;
@@ -4641,7 +4640,9 @@ aside .articles .items a
 
 .articles .article
 {
+    display: flex;
     overflow: hidden;
+    flex-direction: column;
 
     border-radius: 33px;
     background: #fff;
@@ -4678,7 +4679,12 @@ aside .articles .items a
 
 .articles .article .info
 {
+    display: flex;
+    flex-direction: column;
+
     padding: 40px 48px;
+
+    flex: 1 0 auto;
 }
 
 
@@ -4706,6 +4712,8 @@ aside .articles .items a
     line-height: 37px;
 
     margin-top: 28px;
+
+    flex: 1 0 auto;
 }
 
 
